# checklist

./: README.md  pyproject.toml  requirements.txt
core/: settings.py  urls.py
product/: admin.py  filters.py  forms.py  models.py  urls.py  views.py
product/api/: serializers.py  views.py
product/migrations/: 0001_initial.py  0002_remove_orderitem_order_remove_orderitem_product_and_more.py  0003_tag_remove_product_secondary_categories_and_more.py  0004_rename_primary_category_product_category.py
static/css/: bootstrap.min.css.map:Zone.Identifier  styles.css
templates/: base.html  home.html  navbar.html
templates/product/: product_create.html  product_detail.html  product_list.html  product_update.html  tag_list.html
